# mailsy-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-packages.yml  release.yml
packaging/: render_packages.py  test_render_packages.py
src/: account.rs  app.rs  cli.rs  home.rs  lib.rs  main.rs
thoughts/plans/: 2026-07-01-mailghost-branded-home-and-tdd.md
