[package]
name = "mailsy"
version = "1.0.0"
edition = "2021"
description = "Quickly generate a disposable email straight from terminal"
license = "MIT"

[[bin]]
name = "mailsy"
path = "src/main.rs"

[dependencies]
ephemeral_email = "0.2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
