[package]
name = "mailsy"
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
authors = ["Kelvin Jesus <kj.avelino.cambiaghi@gmail.com>"]
description = "Create and inspect a disposable Mail.tm inbox from the terminal"
license = "MIT"
repository = "https://github.com/Kelvin-Jesus/mailsy-rs"
homepage = "https://github.com/Kelvin-Jesus/mailsy-rs"
documentation = "https://github.com/Kelvin-Jesus/mailsy-rs#readme"
readme = "README.md"
keywords = ["cli", "email", "disposable-email", "mail-tm"]
categories = ["command-line-utilities", "email"]
exclude = [".github/", ".gitignore"]
default-run = "mailsy"

[[bin]]
name = "mailsy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ephemeral_email = "0.2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
open = "5"

[target.'cfg(target_os = "android")'.dependencies]
# reqwest uses native-tls through ephemeral_email. Vendoring OpenSSL makes the
# Android release self-contained and cross-compilable with the NDK.
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
strip = "symbols"
