[package]
name = "mailghost"
version = "1.1.2"
edition = "2021"
rust-version = "1.88"
authors = ["Kelvin Jesus <kj.avelino.cambiaghi@gmail.com>"]
description = "A friendly disposable Mail.tm inbox for your terminal"
license = "MIT"
repository = "https://github.com/Kelvin-Jesus/mailghost"
homepage = "https://github.com/Kelvin-Jesus/mailghost"
documentation = "https://github.com/Kelvin-Jesus/mailghost#readme"
readme = "README.md"
keywords = ["cli", "email", "disposable-email", "mail-tm"]
categories = ["command-line-utilities", "email"]
exclude = [".github/", ".gitignore", "thoughts/"]
default-run = "mailghost"

[[bin]]
name = "mailghost"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ephemeral_email = "0.2"
clap = { version = "4", features = ["derive"] }
anstream = "1.0"
anstyle = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
open = "5"

[target.'cfg(target_os = "android")'.dependencies]
# reqwest uses native-tls through ephemeral_email. Vendoring OpenSSL makes the
# Android release self-contained and cross-compilable with the NDK.
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
strip = "symbols"
